--- a/fixate-sass/_imports.scss
+++ b/fixate-sass/_imports.scss
@@ -1,6 +1,6 @@
-@import "utilities/functions/!all";
-@import "utilities/mixins/!all";
-@import 'base/!all';
-@import 'components/!all';
+@import "utilities/functions/all";
+@import "utilities/mixins/all";
+@import 'base/all';
+@import 'components/all';
 @import 'layout/all';
 @import "utilities/debug";
