_widths->grid-widths

--- a/fixate-sass/layout.scss
+++ b/fixate-sass/layout.scss
@@ -3,6 +3,6 @@
 \*------------------------------------*/
 @import "layout/clearfix";
 @import "layout/grids";
-@import "layout/widths";
+@import "layout/grid-widths";
 @import "layout/push";
 @import "layout/pull";
